Accessibility, update category/footer/print styles, refactor, etc.
* More JS rewriting; now refreshed.js doesn't use any jQuery (this way at least everything is consistent about it)
* Add some (pretty basic) styles and JS to help with tab focusing
* Add some (again pretty basic and not comprehensive) role attributes to some elements to hopefully help with accessibility
* Put tools in the toolbar inside li tags to un-break features like the watch button and double clicking to edit; refactor parts of RefreshedTemplate.php to allow the above
* Replace Linker::link with Linker::LinkRenderer::link as the former is deprecated per https://doc.wikimedia.org/mediawiki-core/master/php/classLinker.html#a0b9dca29558082a46075cfd3c7acfc71
* Add firstHeading class to the first heading as the firstHeading ID is deprecated per https://www.mediawiki.org/wiki/Manual:Interface/IDs_and_classes#Deprecated; refactor CSS accordingly (the ID is still there but isn't used by and JS or LESS)
* Give portlets IDs starting with p- for VisualEditor compatibility per https://www.mediawiki.org/wiki/VisualEditor/Skin_requirements
* Add category and TOC icons (done with pseudoelements with svg background images)
* Make links in dropdowns or toolbox red if they are new pages
* Update footer, category, and print styles
* Get rid of WikiFont
* Other misc. refactoring

Change-Id: I08bf8ee71d44b44f0207d65f54d686796b6775b9

--- a/refreshed/styles/screen/big.less
+++ b/refreshed/styles/screen/big.less
@@ -1,5 +1,5 @@
 @import 'variables.less';
-@import 'mediawiki.mixins';
+@import 'mixins.less';
 
 /*******************************************************************************
 **************************** DROPDOWNS/COLLAPSIBLES ****************************
@@ -7,7 +7,7 @@
 
 /* Make right: 0; stick dropdown trays to the right edge of the dropdown,
 not the viewport */
-#toolbox-dropdown {
+#p-tools {
 	position: relative;
 }
 
@@ -116,13 +116,10 @@ a#back-to-subject { /* a for specificity */
   display: none;
 }
 
+.mw-indicator {
+	display: inline;
+}
 
 /*******************************************************************************
 ************************************ FOOTER ************************************
-*******************************************************************************/
-
-/* @TODO */
-
-/*******************************************************************************
-************************************** OLD *************************************
 *******************************************************************************/
