--- a/refreshed/styles/screen/variables.less
+++ b/refreshed/styles/screen/variables.less
@@ -1,5 +1,4 @@
-@import 'mediawiki.mixins';
-
+/********************************* z-indexes **********************************/
 /* see https://www.mediawiki.org/wiki/Manual:Coding_conventions/CSS#z-index;
 we assign the header 101 not 100 so the toolbox can be beneath the header
 and still be above content */
@@ -27,52 +26,63 @@ appears above the dropdown and thus is not underneath its drop shadow */
 /* so it appears above all header stuff and all close overlays */
 @z-index-sidebar-menu: @z-index-close-overlay + 1;
 
-@heading-font-stack: sans-serif; /* sidebar, header, content headings */
-@content-font-stack: 'Helvetica Neue', Helvetica, Arial, sans-serif; /* dropdowns */
-
-/* content colors/backgrounds */
+/************************ backgrounds/background colors ***********************/
 @body-background: #194a8d;
-@body-font-color: #fff;
+
 @header-background: linear-gradient( to left, #040f28 0, #103ca2 50%, #040f28 100% );
-@button-hover-background: midnightblue;
-@button-selected-background: @button-hover-background;
+
+/* also used for collapsibles */
+@header-button-background: transparent;
+@header-button-hover-background: midnightblue;
+@header-button-active-background: @header-button-hover-background;
+@header-button-focus-background: royalblue;
+
 @sidebar-menu-background: @body-background;
+
 @content-backgound-color: #fff;
-@content-font-color: #252525;
-
-@refreshed-icon-height: 1em;
-@dropdown-tray-refreshed-icon-margin-left: 0.4em;
-@pretty-anchor-border-width: 0.3em;
-
-@close-overlay-shadow-color: rgba( 0, 0, 0, 0.2 );
-@content-shadow-color: rgba( 75, 75, 75, 0.4 );
-
-@dropdown-tray-background-color: @content-backgound-color;
-@dropdown-tray-hover-background-color: #eee;
-@dropdown-tray-font-color: @content-font-color;
-@small-dropdown-tray-sidebar-font-size: 1.2em;
 
 @content-dropdown-button-background: #eee;
-@content-dropdown-button-hover-background: #ddd;
-@content-dropdown-button-font-color: inherit;
+@content-dropdown-button-hover-background: #ccc;
+@content-dropdown-button-active-background: @content-dropdown-button-hover-background;
+@content-dropdown-button-focus-background: #ddd;
 
-@header-category-collapsible-padding: 0.25em 0.25em 0.25em 0;
 
-@search-placeholder-text-color: #808080;
+@dropdown-tray-background-color: @content-backgound-color;
+@dropdown-tray-active-background-color: #eee;
+
+@modal-background: rgba( 0, 0, 0, 0.2 );
+
+/******************************** font stacks *********************************/
+/* also sidebar, header, content headings */
+@heading-font-stack: sans-serif;
+/* also dropdowns */
+@content-font-stack: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+/******************************** font colors *********************************/
+/* also sidebar, header, content headings */
+@body-font-color: #fff;
+@search-placeholder-text-font-color: #808080;
+@content-font-color: #252525;
+@dropdown-tray-font-color: @content-font-color;
+
+/******************************** other colors ********************************/
+@content-shadow-color: rgba( 75, 75, 75, 0.4 );
 @search-suggestions-border-color: #ddd;
-
 @firstHeading-border-color: #ddd;
 
-/* height of header */
-@big-header-height: 3em;
-@medium-header-height: 3em;
-@small-header-height: 2.5em;
+/************************* avatar and icon properties *************************/
+@refreshed-icon-height: 1em;
 
-/* width of site navigation header section (wiki homepage link) */
-@site-navigation-toggle-width: 2em; /* this is also used for the sidebar */
-@big-site-navigation-logo-img-max-width: @big-sidebar-width - @site-navigation-toggle-width;
-@medium-site-navigation-logo-img-max-width: @big-site-navigation-logo-img-max-width;
-@small-site-navigation-logo-img-max-width: @big-site-navigation-logo-img-max-width;
+/* dimensions of avatar (SocialProfile or default icons) */
+@avatar-width: 30px;
+@avatar-height: auto;
+
+/***************************** dropdown properties ****************************/
+@dropdown-triangle-border-size: 0.4em;
+
+@dropdown-tray-refreshed-icon-margin-right: 0.4em;
+
+@small-dropdown-tray-sidebar-font-size: 1.2em;
 
 /* width for dropdown trays */
 @big-dropdown-tray-width: @big-sidebar-width;
@@ -80,12 +90,20 @@ appears above the dropdown and thus is not underneath its drop shadow */
 @dropdown-tray-margin-top: -3px;
 @dropdown-tray-vertical-padding: 0.5em;
 
-/* dimensions of avatar (SocialProfile or default icons) */
-@avatar-width: 30px;
-@avatar-height: auto;
+/***************************** header properties ******************************/
+/* height of header */
+@big-header-height: 3em;
+@medium-header-height: 3em;
+@small-header-height: 2.5em;
 
-/* width of placeholder that ensures proper explore button behavior on resize */
-@explore-header-categories-sibling-width: 1px;
+/* site navigation header section (wiki homepage link) */
+@site-navigation-toggle-width: 2em; /* this is also used for the sidebar */
+@big-site-navigation-logo-img-max-width: @big-sidebar-width - @site-navigation-toggle-width;
+@medium-site-navigation-logo-img-max-width: @big-site-navigation-logo-img-max-width;
+@small-site-navigation-logo-img-max-width: @big-site-navigation-logo-img-max-width;
+
+/* header categories */
+@header-category-collapsible-padding: 0.25em 0.25em 0.25em 0;
 
 /* header search box */
 @header-search-font-size: 1em;
@@ -95,15 +113,22 @@ appears above the dropdown and thus is not underneath its drop shadow */
 @medium-header-search-width: 20em;
 @small-header-search-width: 100%;
 
-/* sidebar */
+/* width of placeholder that ensures proper explore button behavior on resize */
+@explore-header-categories-sibling-width: 1px;
+
+/***************************** sidebar properties *****************************/
+/* sidebar width */
 @big-sidebar-width: 12em;
 @medium-sidebar-width: @big-sidebar-width;
 @small-sidebar-width: 75%;
+
 @sidebar-header-padding: 0.25em;
 @sidebar-section-padding-bottom: 0.25em;
+
 @sidebar-ul-padding-top: 0.25em;
 @sidebar-ul-padding-bottom: 0.5em;
 
+/***************************** content properties *****************************/
 /* content position, padding */
 @big-content-right: 1em;
 @content-wrapper-padding: 1em;
@@ -111,260 +136,9 @@ appears above the dropdown and thus is not underneath its drop shadow */
 /* toolbox */
 @refreshed-toolbox-height: 2em;
 
-/** mixins **/
+/****************************** footer properties *****************************/
+@footer-item-spacing-horizontal: 1em;
+@footer-item-spacing-vertical: 1em;
 
-.font-color( @color ) {
-  color: @color;
-  fill: @color;
-}
-
-.stack-box-shadow() {
-  .box-shadow( 0 3px 9px 0 @content-shadow-color );
-}
-
-.header-height( @height ) {
-  #header-wrapper {
-    height: @height;
-  }
-  #content-wrapper,
-  .refreshed-toolbox-stuck {
-    top: @height;
-  }
-  #sidebar {
-    margin-top: @height;
-  }
-
-  .resize-header-icons( @height / 2 );
-}
-
-
-/* explicitly inherit height so the text/images/svg inside have access to the
-element's full height, and make sure they're all vertically aligned the same way
-(especially labels)--for example this ensures all .refreshed-dropdown-triangle
-elements are set to the same height */
-.give-children-height() {
-  div,
-  nav,
-  a,
-  label {
-    height: 100%;
-    vertical-align: top;
-  }
-}
-
-/* the dropdown/sidebar links where a side border appears on hover */
-.pretty-anchor( @active: false, @font-color: auto, @active-background-color: initial, @border-side: horizontal ) {
-  fill: currentColor;
-  & when not ( @font-color = auto ) {
-    .font-color( @font-color );
-  }
-  display: block;
-  padding-top: 0.2em;
-  padding-bottom: 0.2em;
-  padding-left: 1em;
-  padding-right: 1em;
-  border-left: @pretty-anchor-border-width solid transparent;
-  border-right: @pretty-anchor-border-width solid transparent; /* border-right for symmetry */
-  & when ( @border-side = vertical ) {
-    border-left: 0;
-    border-right: 0;
-    border-top: @pretty-anchor-border-width solid transparent;
-    border-bottom: @pretty-anchor-border-width solid transparent; /* border-bottom for symmetry */
-    padding-left: 0.1em;
-    padding-right: 0.1em;
-    margin-right: @pretty-anchor-border-width;
-  }
-  .box-sizing( border-box ); /* padding/border should be included within the 100% width */
-  text-decoration: none;
-
-  &:hover,
-  &:focus,
-  &:active,
-  &.selected {
-    /* use currentColor not @font-color because, for example,
-    if @font-color = auto, then setting border-color to @font-color would set
-    border-color to auto... that is, border-color would be the auto value for
-    border-color, not the auto value for color */
-    border-left-color: currentColor;
-    & when ( @border-side = vertical ) {
-      border-left-color: transparent;
-      border-bottom-color: currentColor;
-    }
-  }
-
-  &:focus,
-  &:active,
-  &.selected {
-    background-color: @active-background-color;
-  }
-
-  & when ( @active = true ) {
-    border-left-color: currentColor;
-    & when ( @border-side = vertical ) {
-      border-left-color: transparent;
-      border-bottom-color: currentColor;
-    }
-    background-color: @active-background-color;
-  }
-
-  svg {
-    vertical-align: middle;
-  }
-}
-
-/* extra padding for some header buttons with text */
-.extra-header-button-padding() {
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-}
-
-/* style the default text for the search bar */
-.searchInput-placeholder() {
-  color: @search-placeholder-text-color;
-  font-weight: 700;
-}
-
-/* style the search bar when it's inside a dropdown (medium, small) */
-.dropdown-searchInput( @header-search-width ) {
-
-  #user-info-dropdown-tray {
-    right: 0;
-  }
-
-  #header-search-dropdown-tray {
-    padding-left: @header-search-padding;
-    padding-right: @header-search-padding;
-    width: @header-search-width;
-    right: 0;
-  }
-
-  #searchInput { /* header search box */
-  	outline: 0;
-  	border-bottom: 3px solid transparent;
-  	/* padding-right is 0.5em more than padding-right of .searchButton to leave
-  	room for it */
-    padding-left: @header-search-padding / 2;
-  	padding-right: @header-search-height + @header-search-padding;
-    width: 100%;
-  }
-
-  #searchInput:focus {
-  	border-color: currentColor;
-  }
-
-  .searchButton {
-  	/* take up full height and stick to right side of #searchInput */
-  	top: 50%;
-  	transform: translateY( -50% );
-  	right: @header-search-padding;
-  }
-
-  [dir = ltr] .searchButton {
-  	/* ooui-icon-arrowNext-ltr */
-  	background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cpath d='M10 2L8.59 3.42 14.17 9H2v2h12.17l-5.58 5.59L10 18l8-8-8-8z'/%3E%3C/svg%3E );
-  }
-
-  [dir = rtl] .searchButton {
-  	/* ooui-icon-arrowNext-rtl */
-  	background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cpath d='M2 10l8 8 1.4-1.4L5.8 11H18V9H5.8l5.6-5.6L10 2z'/%3E%3C/svg%3E );
-  }
-
-  #header-suggestions {
-    margin-top: @header-search-padding !important;
-    width: @header-search-width !important;
-
-    .suggestions-result,
-    .suggestions-special {
-    	padding: 0.75em 0.5em !important;
-    }
-
-    .suggestions-result {
-    	border-bottom: 1px solid @search-suggestions-border-color;
-    }
-
-    .suggestions-special {
-    	margin-top: 0 !important;
-    }
-  }
-}
-
-/* adjust size of header icons */
-.resize-header-icons( @width ) {
-  .refreshed-icon-refreshed-menu,
-  .refreshed-icon-search,
-  .refreshed-icon-refreshed-explore {
-    width: @width;
-    height: auto;
-  }
-}
-
-/* sidebar as a menu */
-.use-sidebar-menu( @sidebar-width, @sidebar-background ) {
-  #sidebar-wrapper {
-    width: @sidebar-width;
-    left: -( @sidebar-width );
-    background: @sidebar-background;
-    z-index: @z-index-sidebar-menu;
-  }
-
-  #sidebar-toggler-checkbox:checked ~ #sidebar-wrapper {
-  	left: 0;
-  	/* only apply the box shadow when the sidebar is opened so the shadow doesn't
-  	appear on the edge of the screen when the sidebar is closed (just off the edge
-  	of the screen) */
-  	.stack-box-shadow();
-  }
-
-  .content-wrapper-width( 0, 0 );
-}
-
-.content-wrapper-width( @left, @right ) {
-  #content-wrapper,
-  .refreshed-toolbox-stuck {
-    left: @left;
-    right: @right;
-  }
-
-  #user-info-search-wrapper {
-    margin-right: @right;
-  }
-}
-
-.use-refreshed-toolbox-sticky( @header-height ) {
-  #refreshed-toolbox {
-    .position-sticky();
-    top: @header-height;
-  }
-
-  .refreshed-toolbox-stuck#refreshed-toolbox {
-    background-color: @content-backgound-color;
-    padding-left: @content-wrapper-padding;
-    padding-right: @content-wrapper-padding;
-    margin: 0 -( @content-wrapper-padding );
-    .stack-box-shadow();
-  }
-}
-
-.position-sticky() {
-  position: -webkit-sticky;
-  position: sticky;
-}
-
-/* additional flex mixins */
-
-.flex-direction( @value ) {
-  -webkit-flex-direction: @value; // Chrome 21.0-, Safari 6.1-
-	-moz-flex-direction: @value; // Firefox 18.0-
-	flex-direction: @value;
-}
-
-.flex-justify-content( @value ) {
-  -webkit-justify-content: @value; // Chrome 21.0-, Safari 6.1-
-	-moz-justify-content: @value; // Firefox 18.0-
-	justify-content: @value;
-}
-
-.flex-align-items( @value ) {
-  -webkit-align-items: @value; // Safari 7.0-
-  align-items: @value;
-}
+/****************************** other properties ******************************/
+@pretty-anchor-border-width: 0.3em;
